work with api and ajax

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,33 +5,131 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <%- include('style') -%>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div>
             <h1 style="text-align: center; font-weight: bold;">Blogs...</h1>
+            <!-- <input type="button" value="get" onclick="getPost();" /> -->
+            <input type="button" value="post a new blog" onclick="openForm()" />
         </div>
-        <div>
-        <% blogs.map(function(blog,index){ %>
-            <div class="blog-item">
-                <h3>
-                <div class="b_item">
-                    <div>
-                        <a href="/blog/<%= blog.id %>">
-                            <%= index+1 %> <%= blog.title %>
-                        </a>
-                    </div>
-                    <div class="dateandtime">
-                        <%= blog.dateandtime %>
-                    </div>
 
-                </div>
+
+        <div class="myform">
+            <form method="POST" id="myform">
+                <input type="text" name="title"  placeholder="enter title" /><br/>
                 
-                </h3>
-                <div><%= blog.body.slice(0,300) %>..</div>
-            </div>
-        <% }); %>
+                <!-- <input type="text" name="body" placeholder="enter body"/> -->
+                <textarea name="body" id="" placeholder="enter your body" cols="30" rows="10"></textarea>
+                <br/>
+                <input type="text" name="user" placeholder="user" /><br/>
+                <input type="text" name="dateandtime" placeholder="enter date and time"/><br/>
+                <input type="submit" value="POST" id="submitbutton" />
+            </form>
         </div>
+
+
+        <div id="all_post">
+
+        </div>
+
+
     </div>
+    <script type="text/javascript">
+        
+        //to getting post with ajax
+        const getPost = () =>{
+            $.ajax({
+                url:"http://localhost:3000/api/allPost",
+                method:"GET",
+                success:(e)=>{
+                    console.log("success")
+                    // console.log(e)
+
+                    var __html = ""
+
+                    e.data.map((item,next)=>{
+
+                        __html+=`<div class="blog-item">
+                                    <h3>
+                                        <div class="b_item">
+                                            <div>
+                                                <a href="/blog/${item._id}">
+                                                    ${item.title}
+                                                </a>
+                                            </div>
+                                            <div class="dateandtime">
+                                                ${item.dateandtime}
+                                            </div>
+                                        </div>
+                                    </h3>
+                                    <div>${item.body.slice(0,300)}..</div>
+                                </div>`
+
+
+                    })
+
+                    $("#all_post").html(__html)
+                },
+                error:(e)=>{
+                    console.log("error")
+                    console.log(e)
+                }
+            })
+        }
+    
+    
+        const openForm = () =>{
+            $(".myform").css({
+                "display":"unset"
+            })
+        }
+
+        $(document).ready(()=>{
+
+
+            $("#myform").on("submit",(e)=>{
+                e.preventDefault()
+                console.log(e.target.title.value)
+                console.log(e.target.body.value)
+                console.log(e.target.user.value)
+                console.log(e.target.dateandtime.value)
+
+                const data = {
+                    "title":e.target.title.value,
+                    "body":e.target.body.value,
+                    "user":e.target.user.value,
+                    "dateandtime":e.target.dateandtime.value
+                }
+                $.ajax({
+                    method:"POST",
+                    data:data,
+                    dataType:"JSON",
+                    url:"http://localhost:3000/api/add",
+                    success:(e)=>{
+                        console.log(e)
+                        // $("#submitbutton").val("successful")
+                    },
+                    error:(e)=>{
+                        console.log(e)
+                    }
+                })
+
+
+
+            })
+
+        })
+
+        // const submitAPost = (e) =>{
+        //     e.preventDefault()
+        //     console.log("submit")
+        // }
+
+        // $(document).ready(()=>{
+        //     getPost()
+        // })
+    </script>
 </body>
 </html>
