--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
 
         $(document).ready(()=>{
 
-
+            // to post a blog
             $("#myform").on("submit",(e)=>{
                 e.preventDefault()
                 console.log(e.target.title.value)
