--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         </div>
 
 
-        <div class="myform">
+        <div class="myform" style="display: none;">
             <form method="POST" id="myform">
                 <input type="text" name="title"  placeholder="enter title" /><br/>
                 
@@ -127,9 +127,9 @@
         //     console.log("submit")
         // }
 
-        // $(document).ready(()=>{
-        //     getPost()
-        // })
+        $(document).ready(()=>{
+            getPost()
+        })
     </script>
 </body>
 </html>
