--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,6 +12,9 @@
         <p class="body"><%= blog.body %></p>
         <p><%= blog.user %></p>
         <p><%= blog.dateandtime %></p>
+        <a href="/edit/<%= blog.id%>">
+            <button>Edit</button>
+        </a>
     </div>
 </body>
 </html>
