--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -10,16 +10,22 @@
 <body>
     <div class="container">
      
-        <h1>Add Your blog</h1>
+
+        <% if(type == "edit"){ %>
+            <h1> Edit Your blog</h1>
+            
+          <% } else{ %>  
+            <h1> Add Your blog</h1>
+         <% } %>
     
-        <form method="POST">
-            <input type="text" name="title"  placeholder="enter title" /><br/>
+        <form method="POST" action="">
+            <input type="text" name="title" value=<% if(type=="edit") {%> "<%=data.title%>"  <% } else { %> "" <%}%>   placeholder="enter title" /><br/>
             
             <!-- <input type="text" name="body" placeholder="enter body"/> -->
-            <textarea name="body" id="" placeholder="enter your body" cols="30" rows="10"></textarea>
+            <textarea name="body" id="" placeholder="enter your body" cols="30" rows="10"> <% if(type=="edit") {%> <%=data.body%>  <% } else { %><%}%></textarea>
             <br/>
-            <input type="text" name="user" placeholder="user" /><br/>
-            <input type="text" name="dateandtime" placeholder="enter date and time"/><br/>
+            <input type="text" name="user" value=<% if(type=="edit") {%> "<%=data.user%>"  <% } else { %> "" <%}%> placeholder="user" /><br/>
+            <input type="text" name="dateandtime" placeholder="enter date and time" value=<% if(type=="edit") {%> <%=data.dateandtime%>  <% } else { %> "" <%}%>/><br/>
             <input type="submit" value="POST" />
         </form>
     </div>
